infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingres-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
